samples/_failures_safe/1761687974_b1d073_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c833fa0.c: In function ‘main’:
./samples/SAFE/__tmp_6c833fa0.c:174: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_6c833fa0.c:173:8: note: to match this ‘(’
  173 |     if (fgets(input, sizeof(input), stdin) == NULL
      |        ^
./samples/SAFE/__tmp_6c833fa0.c:173:5: error: expected declaration or statement at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL
      |     ^~
